# NdkImprove

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wwj/ndkimprove/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndkimprove.cpp  objectOperator.cpp
app/src/main/java/com/wwj/ndkimprove/: JniInterfaceUtil.java  MainActivity.java
app/src/main/java/com/wwj/ndkimprove/bean/: JniOperateBean.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/wwj/ndkimprove/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
